refactor: Update CSS to animate powered_by element on page load

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,15 @@
 <body class="p-8">
   <img src="/img/search_icon.svg" alt="search icon" id="search_hero" class="mx-auto w-32"/>
   <h1 class="text-6xl font-bold text-center">
-    <span id="searh_hero_text" class="">Search</span>
+    <span id="searh_hero_text" class="overflow-hidden inline-block">Search</span>
     <span id="hide_search">
       <span id="transparent_hide_search"> </span>
     </span>
-    powered by 
+    <span class="overflow-hidden inline-block">
+      <span id="powered_by">
+        powered by 
+      </span>
+    </span>
     <span class="overflow-hidden h-16 block">
       <span id="ai_agents" class="text-center block font-extrabold drop-down-text">AI agents</span>
     </span>
